--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: -60px;
+    margin-top: -110px;
 }
 .pr_title {
     border-left: 3px solid #3c4973;
@@ -218,6 +218,7 @@ html {
     position: relative; text-align: center;
     margin-top: 80px; margin-bottom: 100px;
 }
+.thumb {text-align: center; margin-top: 10px;}
 .pf_gosite a {
     overflow: hidden;
     position: relative; z-index: 1;
